# progbasictrain-report1

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile.am  README.md  acinclude.m4  autogen.sh  configure.ac
m4/includes/: my_check_modules_link.m4
misc/: cibuild.sh  lsan_ignore.txt  search_icm2_param.sh
src/: Makefile.am  config.inc.h  denoiser_main.c  general_main.c  logger.c  logger.h  noiser_main.c  pbm.c  pbm.h  pbmutil.c  pbmutil.h
src/codec/: codec_count.c  codec_cv.c  codec_gtk.c  codec_pbm.c  codec_png.c  codec_sixel.c  codecs.c  codecs.h
src/filter/: filter_common.c  filter_common.h  filter_diff.c  filter_icm.c  filter_icm.h  filter_icm2.c  filter_noise.c  filter_noise.h  filters.c  filters.h
test/: Makefile.am  denoiser_test.sh  general_filter_test.sh  noiser_test.sh  pbm_test.c  test_main.c  test_main.h  test_pbmcore.c  test_pbmcore.h
test/codec/: codec_count_test.sh  codec_pbm_test.c  codec_png_test.c  test_pbmcodec.c  test_pbmcodec.h
test/data/pbm/: 01_invalid_sig1.pbm  01_invalid_sig2.pbm  02_extra_header.pbm  02_minus_size.pbm  02_no_height.pbm  02_no_width.pbm  03_extra_data.pbm  03_extra_row.pbm  03_invalid_data.pbm  03_invalid_delimiter.pbm  03_lack_col.pbm  03_lack_data.pbm  03_lack_row.pbm  04_crlf.pbm  04_lf.pbm  99_image2.pbm
test/filter/: filter_diff_test.c  filter_icm2_test.c  filter_icm_test.c  filter_noise_test.c  test_pbmfilter.c  test_pbmfilter.h
test/shtest/: 01_show_help.sh  02_invalid_short_opt.sh  03_invalid_long_opt.sh  10_file_to_file.sh  11_pipe_to_pipe.sh  12_f2p_p2f.sh  13_not_readable.sh  14_not_writable.sh  15_invalid_source.sh  16_invalid_codec_type.sh  17_not_readable_codec.sh  18_codec_prediction_failed.sh  30_filter_noise.sh  30_filter_not_found.sh  31_filter_diff.sh  32_filter_icm.sh  33_filter_icm2.sh  34_filter_noise.sh
